# krillboost

./: README.md  classifyNotes.md  pyproject.toml
config/: download_settings.json  map_bounds.py  map_params.json
src/krillboost/plotting/: plotClass.py  plotEnv.py  plotPredict.py  plotValid.py
src/krillboost/preprocess/: dataFusion.py  downloadCop.py  exploreNC.py  sub680.py  subsetCop.py
src/krillboost/training/: train.py
